varianza inicial en la configuración de la FC